Fix some style issues (Note : we should check it on mobile anyway)

--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -1,191 +1,182 @@
-body {
-    background-color: lightblue;
-}
-
-h1 {
-    color: navy;
-    margin-left: 20px;
-}
-
 /* Custom class for local */
 
 /* Page 1 */
 .Coverimage {
-  .Frame9 {
-    div {
-      text-align: center;
-      color: black; 
-      font-family: "Noto Serif KR";
-      font-weight: 400;
-      line-height: 22.50px;
-      word-wrap: break-word;
-      display: inline-block;
-    }
-    display: flex;
-    height: 100%;
-    margin: auto;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 15px;
-  }
-  background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../resources/image/Cover_0.jpg") no-repeat center center;
-  background-size: cover;
-  background-position: 50% 20%;
-  height: 100vh;
-  min-height: 480px;
-  margin:auto;
-  overflow-x: hidden;
-  overflow-y: hidden;
+	.Frame9 {
+		div {
+			text-align: center;
+			color: black; 
+			font-family: "Noto Serif KR";
+			font-weight: 400;
+			line-height: 22.50px;
+			word-wrap: break-word;
+			display: inline-block;
+		}
+		display: flex;
+		height: 100%;
+		margin: auto;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: center;
+		gap: 15px;
+	}
+	background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../resources/image/Cover_0.jpg") no-repeat center center;
+	background-size: cover;
+	background-position: 50% 20%;
+	height: 100vh;
+	min-height: 480px;
+	margin:auto;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 /* Page 5 */
 .guideToMap {
-  position: relative;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 10px;
-  display: inline-flex;
+	position: relative;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: 10px;
+	display: inline-flex;
 }
 
 .iconButtonContainer {
-  align-self: stretch;
-  padding: 10px 50px 10px 50px;
-  justify-content: space-between;
-  align-items: flex-start;
-  display: inline-flex;
+	align-self: stretch;
+	padding: 10px 50px 10px 50px;
+	justify-content: space-between;
+	align-items: flex-start;
+	display: inline-flex;
 }
 
 /* More gallery */
 
 .moreImageContainer {
-  max-height: 1400px;
-  overflow-x: scroll;
+	max-height: 1400px;
+	overflow-x: scroll;
 
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content:flex-start;
-  gap: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content:flex-start;
+	gap: 10px;
 }
 
 .moreImageContainer img {
-  object-fit: contain;
-  max-width: 100%;
-  height: auto;
-  vertical-align: middle;
+	object-fit: contain;
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
 }
 
 /* Swipper */
 .galleryContent {
-  background: #FBFBFB;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	background: #FBFBFB;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .galleryContainer {
-  width: auto;
-  display: inline-block;
-  padding: 50px;
-  max-height: 500px; /* Will be used when we fail to load image so swipper is break down. */
-  overflow: hidden;
+	width: auto;
+	display: inline-block;
+	padding: 50px;
+	max-height: 500px; /* Will be used when we fail to load image so swipper is break down. */
+	overflow: hidden;
 }
 
 .swiper {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    overflow: visible !important;
+		width: 100%;
+		padding-top: 50px;
+		padding-bottom: 50px;
+		overflow: visible !important;
 }
 
 .swiper-slide {
-    background-position: center;
-    background-size: cover;
-    max-width: 70%;
-    margin: auto;
-    max-width: 300px;
+		background-position: center;
+		background-size: cover;
+		max-width: 70%;
+		margin: auto;
+		max-width: 300px;
 }
 
 .swiper-slide img {
-    position: center;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-radius: 30px;
-    box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.25);
-    transition: 0.3s;
+		position: center;
+		display: inline-block;
+		width: 100%;
+		height: 100%;
+		border-radius: 30px;
+		box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.25);
+		transition: 0.3s;
 }
 
 .swiper-slide img:hover {
-    transform:scale(1.05);
+		transform:scale(1.05);
 }
 
 /* Modal */
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-  }
-  
-  /* Modal Content (image) */
-  .modal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-  }
-  
-  /* Add Animation */
-  .modal-content, #caption {  
-    -webkit-animation-name: zoom;
-    -webkit-animation-duration: 0.3s;
-    animation-name: zoom;
-    animation-duration: 0.3s;
-  }
-  
-  @-webkit-keyframes zoom {
-    from {-webkit-transform:scale(0)} 
-    to {-webkit-transform:scale(1)}
-  }
-  
-  @keyframes zoom {
-    from {transform:scale(0)} 
-    to {transform:scale(1)}
-  }
-  
+		display: none; /* Hidden by default */
+		position: fixed; /* Stay in place */
+		z-index: 1; /* Sit on top */
+		padding-top: 100px; /* Location of the box */
+		left: 0;
+		top: 0;
+		width: 100%; /* Full width */
+		height: 100%; /* Full height */
+		overflow: auto; /* Enable scroll if needed */
+		background-color: rgb(0,0,0); /* Fallback color */
+		background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+	}
+	
+	/* Modal Content (image) */
+	.modal-content {
+		margin: auto;
+		display: block;
+		width: 80%;
+		max-width: 700px;
+	}
+	
+	/* Add Animation */
+	.modal-content, #caption {	
+		-webkit-animation-name: zoom;
+		-webkit-animation-duration: 0.3s;
+		animation-name: zoom;
+		animation-duration: 0.3s;
+	}
+	
+	@-webkit-keyframes zoom {
+		from {-webkit-transform:scale(0)} 
+		to {-webkit-transform:scale(1)}
+	}
+	
+	@keyframes zoom {
+		from {transform:scale(0)} 
+		to {transform:scale(1)}
+	}
+	
 /* The Close Button */
 .closeModal {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-  }
-  
-  .closeModal:hover,
-  .closeModal:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  /* 100% Image Width on Smaller Screens */
-  @media only screen and (max-width: 700px){
-    .modal-content {
-      width: 100%;
-    }
-  }
+		position: absolute;
+		top: 15px;
+		right: 35px;
+		color: #f1f1f1;
+		font-size: 40px;
+		font-weight: bold;
+		transition: 0.3s;
+	}
+	
+	.closeModal:hover,
+	.closeModal:focus {
+		color: #bbb;
+		text-decoration: none;
+		cursor: pointer;
+	}
+	
+	/* 100% Image Width on Smaller Screens */
+	@media only screen and (max-width: 700px){
+		.modal-content {
+			width: 100%;
+		}
+	}
